2004-01-13 Benoit Regrain
     * gdcmPython/testSuite.py : test the readable flag of file for tests

2004-01-12 Benoit Regrain
     * src/*.h : add comments
     * src/gdcmDictSet.h : set the method BuildDictPath in public
     * src/gdcmTS.cxx, gdcmVR.cxx : use now a dictionnary file other than to be
       directly setted in the source code
     * Dicts/dicomTS.dic, dicomVR.dic : 2 new dictionnary files loaded by
       gdcmTS and gdcmVR

2004-01-09 Benoit Regrain
     * gdcmPython/gdcmVersion.py : add a gdcmVERSION variable information
     * setup.py : use a reference to gdcmVERSION

2004-01-07 Benoit Regrain
     * Modification to compile with the distutils.
     * Bug fix in code

2003-12-10 Benoit Regrain
     * gdcmHeader is now aggregating gdcmFile, and not derived into. Thus, we
       can use a gdcmHeaderHelper to load datas
     * gdcmPython/testSuite.py : make the testSuite compliant with modifications
       made in the source code

2003-12-10 Benoit Regrain
     * Update Windows projects and .cvsignore files

2003-11-12 Jean-Pierre Roux
     *ENH  gdcmHeader constructor has one more parameter (default value : false)
           that allows the user to 'go inside' the SeQuences only
	   if he wants to.
	   gdcmElValSet:Print takes it into account

2003-11-12  Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
     *ENH: Update gdcmPython/CMakeLists
     *FIX: (gdcmHeaderHelper) GetRescale and GetSlope
     *FIX: (gdcmElValSet) char 'tag' was overiding private members (VC++)

2003-11-10 Jean-Pierre Roux
      *FIX : gdcmHeader::LoadElements is now based
             on the ListTag listElem member,
             not longer on the TagElValueHT tagHt member
      *ENH : PrintPubElVal shows (temporarily) both results,
             with the tagHt member and the listElem member.
	     (it's easier to 'see' the problems when using Printheader)

      *FIX : old private member LgrElem is now splitted into